# MY-DOGE-MICRO

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROXY_CONFIG_GUIDE.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  UPGRADING.md  doge_mcp.py  mcp_server.py  models_config.json  models_config.template.json  proxy_config_guide.md  pyproject.toml  requirements.txt
.claude/: statusline.sh
.codex/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
adapters/: README.md
demo_materials/: sample_portfolio.csv  sector_rotation.pptx
design/: CLAUDE.md
docs/: API.md  CLAUDE.md  CLI.md  COLLABORATIVE-DESIGN-PRINCIPLE.md  CUSTOMER-ACCEPTANCE.md  GETTING_STARTED.md  MCP_SERVER.md  MODULARIZATION_PLAN.md  QUICK-START.md  START-HERE.md  USER-MANUAL.md  WORKFLOW-GUIDE.md  adoption-plan-2026-06-11.md  index.md  kimi-enterprise-reference-architecture.md  kimi-financial-copilot-demo.md  operations-runbook.md  poc-success-criteria.md  security-and-data-boundaries.md
examples/: .env.example  README.md
memory_bank/: README.md  document_map.yaml
production/: sprint-status.yaml  wave-4-review-readiness.md
scripts/: analyst_trend_history.py  apply_alpha_remote_ci_success.py  browser_sdk_reconnect_smoke.py  build_analyst_benchmark_evidence.py  build_enterprise_production_validation_evidence.py  build_financial_provider_approval_evidence.py  build_screen_reader_evidence.py  build_sdk_release_approval_evidence.py  case_workspace_ax_tree_smoke.py  check_diff_whitespace.py  close_alpha_remote_ci_gate.py  daemon_soak.py  doge_idp_jwks_operator_tool.py  doged_enterprise_jwks_auth_smoke.py  doged_enterprise_process_secret_auth_smoke.py  doged_enterprise_static_auth_smoke.py  doged_live_idp_jwks_auth_smoke.py  doged_remote_bind_gate_smoke.py  evidence_placeholders.py  evidence_redaction.py  export_plan_closure_manifest.py  generate_docs_status.py  generate_gate_required_sections.py  generate_phase_checklists.py  mcp_stdio.bat  mcp_stdio.sh  platform_shell_default_entry_smoke.py  preflight_plan_closure_external.py  prepare_plan_closure_handoff.py  report_compatibility_count.py  research_agent_ax_tree_smoke.py  research_agent_doged_reconnect_smoke.py  run_citation_quality_benchmark.py  run_kimi_live_smoke.py  run_rag_quality_benchmark.py  sdk_external_consumer_smoke.py  skill_lint.py  start_mcp_sse.bat  start_mcp_sse.sh  validate_adr_index_completeness.py  (+34 more)
skill_testing/: README.md  catalog.yaml
src/: CLAUDE.md  cli.py
standards/: coding-standards.md  coordination-rules.md  director-gates.md  directory-structure.md  technical-preferences.md
templates/: accessibility-requirements.md  architecture-decision-record.md  architecture-doc-from-code.md  architecture-traceability.md  concept-doc-from-prototype.md  constitution-design-document.md  (+18 more)
(+1843 files in other folders)
