[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doge"
version = "0.2.1"
description = "MY-DOGE Micro Stock Analysis System"
requires-python = ">=3.10"
dependencies = [
    "duckdb==1.4.4",
    "pandas==2.2.3",
    "scipy==1.16.3",
    "tabulate==0.10.0",
    "tqdm==4.67.1",
    "yfinance==0.2.66",
    "openai==1.62.0",
    "mcp==1.25.0",
    "fastapi==0.123.8",
    "uvicorn==0.38.0",
    "sse-starlette==3.0.3",
    "pydantic==2.12.4",
    "httpx==0.28.1",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
]

[project.optional-dependencies]
gui = ["PyQt6"]
tdx = ["opentdx"]
cn = ["akshare"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
