[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doge"
version = "0.2.1"
description = "OpenDoge local-first slot-based financial research agent runtime"
requires-python = ">=3.10"
dependencies = [
    "duckdb==1.4.4",
    "pandas==2.2.3",
    "scipy==1.16.3",
    "tabulate==0.10.0",
    "tqdm==4.67.1",
    "yfinance==0.2.66",
    "openai==1.62.0",
    "mcp==1.25.0",
    "fastapi==0.123.8",
    "python-multipart==0.0.20",
    "uvicorn==0.38.0",
    "sse-starlette==3.0.3",
    "pydantic==2.12.4",
    "httpx==0.28.1",
    "PyJWT[crypto]==2.13.0",
    "cryptography==44.0.2",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
]

[project.optional-dependencies]
tdx = ["opentdx"]
cn = ["akshare"]

[project.scripts]
doge = "doge.interfaces.cli.main:main"
doged = "doge.interfaces.daemon.main:main"
doged-api = "doge.interfaces.daemon.main:main_api"
doged-worker = "doge.interfaces.daemon.main:main_worker"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src", "packages/doge-sdk-python"]
# Product-module markers (L-3). Tag tests with the product module they primarily
# exercise so work can be selected/owned per module: `pytest -m module_market`.
# Tagging is incremental — most tests are untagged today; expand per module.
markers = [
    "module_market: tests primarily exercising doge.products.market",
    "module_portfolio: tests primarily exercising doge.products.portfolio",
    "module_quant: tests primarily exercising doge.products.quant",
    "module_research: tests primarily exercising doge.products.research",
    "module_gateway: tests primarily exercising the /v1 daemon gateway (doge.interfaces.gateway)",
]
